--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.cloud.task.app</groupId>
   <artifactId>spring-cloud-task-app-starters</artifactId>
-  <version>1.0.0.BUILD-SNAPSHOT</version>
+  <version>1.0.0.RC1</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-build</artifactId>
     <version>1.1.1.RELEASE</version>
-    <relativePath></relativePath>
+    <relativePath />
   </parent>
 
   <scm>
@@ -46,7 +45,7 @@
       <dependency>
         <groupId>org.springframework.cloud.task.app</groupId>
         <artifactId>spring-cloud-task-app-dependencies</artifactId>
-        <version>${project.version}</version>
+        <version>1.0.0.RC1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
