--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.cloud.task.app</groupId>
   <artifactId>spring-cloud-task-app-starters</artifactId>
-  <version>1.0.0.RC1</version>
+  <version>1.0.0.BUILD-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
@@ -46,7 +46,7 @@
       <dependency>
         <groupId>org.springframework.cloud.task.app</groupId>
         <artifactId>spring-cloud-task-app-dependencies</artifactId>
-        <version>1.0.0.RC1</version>
+        <version>1.0.0.BUILD-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
