--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
   <properties>
     <java.version>1.7</java.version>
-    <scs-app-maven-plugin.version>1.0.0.RC1</scs-app-maven-plugin.version>
-    <spring.cloud.task.core.version>1.0.0.RC1</spring.cloud.task.core.version>
+    <scs-app-maven-plugin.version>1.0.0.RELEASE</scs-app-maven-plugin.version>
+    <spring.cloud.task.core.version>1.0.0.RELEASE</spring.cloud.task.core.version>
   </properties>
 
   <modules>
