--- a/spring-cloud-task-sqoop-common/pom.xml
+++ b/spring-cloud-task-sqoop-common/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.springframework.cloud.task.app</groupId>
         <artifactId>spring-cloud-task-app-starters</artifactId>
-        <version>1.0.1.BUILD-SNAPSHOT</version>
+        <version>1.0.1.RELEASE</version>
         <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
