--- a/spring-cloud-task-app-descriptor/pom.xml
+++ b/spring-cloud-task-app-descriptor/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>spring-cloud-task-app-starters</artifactId>
 		<groupId>org.springframework.cloud.task.app</groupId>
-		<version>1.0.1.RELEASE</version>
+		<version>1.0.1.BUILD-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
