--- a/spring-cloud-starter-task-jdbchdfs-local/pom.xml
+++ b/spring-cloud-starter-task-jdbchdfs-local/pom.xml
@@ -5,13 +5,13 @@
 
     <artifactId>spring-cloud-starter-task-jdbc-hdfs-local</artifactId>
     <packaging>jar</packaging>
-    <name>spring-cloud-starter-task-jdbc-hdfs-local</name>
+    <name>Spring Cloud Starter Task Jdbchdfs Local</name>
     <description>Spring Cloud Task Jdbc Hdfs Starter</description>
 
     <parent>
         <groupId>org.springframework.cloud.task.app</groupId>
         <artifactId>spring-cloud-task-app-starters</artifactId>
-        <version>1.0.0.BUILD-SNAPSHOT</version>
+        <version>1.0.2.BUILD-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -40,7 +40,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud.task.app</groupId>
-            <artifactId>spring-cloud-task-jdbchdfs-common</artifactId>
+            <artifactId>spring-cloud-task-jdbc-hdfs-common</artifactId>
+            <version>1.0.2.BUILD-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
