--- a/spring-cloud-task-jdbchdfs-common/pom.xml
+++ b/spring-cloud-task-jdbchdfs-common/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.springframework.cloud.task.app</groupId>
 		<artifactId>spring-cloud-task-app-starters</artifactId>
-		<version>1.0.0.BUILD-SNAPSHOT</version>
+		<version>1.0.2.BUILD-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>spring-cloud-task-jdbchdfs-common</artifactId>
+	<artifactId>spring-cloud-task-jdbc-hdfs-common</artifactId>
 	<packaging>jar</packaging>
 	<name>spring-cloud-task-jdbchdfs-common</name>
 
@@ -77,10 +77,20 @@
 			<artifactId>spring-cloud-deployer-resource-maven</artifactId>
 			<version>${spring.cloud.deployer.resource.maven}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
 			<scope>test</scope>
 		</dependency>
 
